# ModelIndependentFit

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  fit.sh  plot_result.plt
include/: CachedIntegrator.h  DataGenerator.h  Fit.h  FitIntegrator.h  FitModel.h  FitResultFileIterator.h  FittedFreeAmplitude.h  FreedWave.h  KnownMassShapeFreedWave.h  MassBin.h  MassRangePartition.h  ModelIndependentFitModel.h  OnTheFlyIntegrator.h  RTPlotMIFitModel.h  RealTimeParameterPlot.h  RealTimePlotModelIndependentFitModel.h  RootFileHandler.h  RootFitData.h  TTreeHandler.h  fit_utilities.h  parallelism.h  parameter_handling.h
include/fwd/: CachedIntegrator.h  Fit.h  FitIntegrator.h  FitModel.h  FitResultFileIterator.h  FittedFreeAmplitude.h  FreedWave.h  KnownMassShapeFreedWave.h  MassBin.h  MassRangePartition.h  ModelIndependentFitModel.h  OnTheFlyIntegrator.h  RTPlotMIFitModel.h  RealTimeParameterPlot.h  RealTimePlotModelIndependentFitModel.h  RootFileHandler.h  RootFitData.h  TTreeHandler.h
include/model/: d3pi.h  model_independent_d3pi.h
model-independent/: d3pi_one_resonance.cxx  d3pi_one_resonance.h
src/: CMakeLists.txt  CachedIntegrator.cxx  DataGenerator.cxx  Fit.cxx  FitIntegrator.cxx  FitModel.cxx  FitResultFileIterator.cxx  FittedFreeAmplitude.cxx  FreedWave.cxx  KnownMassShapeFreedWave.cxx  MassBin.cxx  MassRangePartition.cxx  ModelIndependentFitModel.cxx  OnTheFlyIntegrator.cxx  RTPlotMIFitModel.cxx  RealTimeParameterPlot.cxx  RealTimePlotModelIndependentFitModel.cxx  RootFileHandler.cxx  RootFitData.cxx  TTreeHandler.cxx  mi_fit.cxx  parallelism.cxx  parameter_handling.cxx  root_to_txt.cxx  runMIGen.cxx  runmiFit.cxx
src/model/: d3pi.cxx  model_independent_d3pi.cxx
